--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <body>
     <div class="container">
+
+        <header>
+            <nav>
+                
+            </nav>
+        </header>
    
         <section class="top-content">
             <div class="text-container">
