--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <div class="container">
 
         <header>
-            <div class="logo">//img logo</div>
-            <nav>
-                <a href="#">Home</a>
-                <a href="/about.html">About</a>
-                <a href="#">Products</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
-            </nav>
-            <div class="space">//img spanning space</div>
+            <div class="headertop">
+                <nav>
+                    <img src="img/lambda-black.png" alt="black Lambda logo" class="logo">
+                    <a href="#">Home</a>
+                    <a href="/about.html">About</a>
+                    <a href="#">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>    
+            <img src="/img/jumbo.jpg" alt="light speed traffic" class=traffic>
         </header>
    
         <section class="top-content">
